--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
   "dependencies": {
     "express": "^4.16.3",
     "if-env": "^1.0.4",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "react-router-dom": "^5.0.1",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.87.3"
   }
 }
