--- a/package.json
+++ b/package.json
@@ -20,13 +20,16 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "create-react-app": "^3.0.1",
     "dotenv": "^8.0.0",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
     "mongoose": "^5.6.4",
     "morgan": "^1.9.1",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.87.3"
+    "semantic-ui-react": "0.87"
   }
 }
